--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ retinex_bbox.avi
 rf_trained_pred/retinex/retinex.gif
 sitk_combined/registered_volume.nii.gz
 sitk_combined/transforms.pkl
+ilastik-1.4.1b20-gpu-Linux.tar.1.bz2
+segmentation_masks.tar.xz
